--- a/style.css
+++ b/style.css
@@ -109,6 +109,11 @@
 			z-index: 50;
 		}
 
+		.logo:hover {
+			transform: scale(1.1);
+			transition: 1s;
+		}
+
 		.single-page .logo {
 			grid-column: 2 / span 1;
 			grid-row: 2 / span 1;
@@ -117,6 +122,11 @@
 			opacity: 1;
 			transition: opacity 1s;
 			z-index: 50;
+		}
+
+		.single-page .logo:hover {
+			transform: scale(1.1);
+			transition: 2s;
 		}
 
 		.logo.hide {
@@ -140,6 +150,10 @@
 			max-width: 30px;
 			max-height: 30px;
 			margin: 10px 10px 0 0;
+		}
+
+		.icon:hover {
+			opacity: 0.75;
 		}
 
 		. skjul {
@@ -179,6 +193,11 @@
 			margin: 9px 0;
 			transition: 0.4s;
 			box-shadow: 1px 1px 10px #000, 1px 1px 10px #ccc;
+		}
+
+		.burger:hover {
+			transform: scale(1.2);
+			transition: 1s;
 		}
 
 		.change .bar1 {
@@ -647,10 +666,10 @@
 		}
 
 		footer button:hover {
-			background-color: #a1a1a1;
+			opacity: 0.5;
 		}
 
-		footer img:hover {
+		footer .icon:hover {
 			opacity: 0.5;
 		}
 
