--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,8 @@
 			font-size: 2rem;
 		}
 
+		/*til links på mørk bund*/
+
 		a.darklink,
 		a.darklink:link,
 		a.darklink:active,
@@ -109,6 +111,9 @@
 			height: 200px;
 		}
 
+
+		/* nedtonet bund i header*/
+
 		.darkwrapper {
 			background-color: var(--logograa);
 			width: 100%;
@@ -145,6 +150,9 @@
 			transform: scale(1.1);
 			transition: 1s;
 		}
+
+
+		/*singe-page er regler for single.html*/
 
 		.single-page .logo {
 			grid-column: 2 / span 1;
@@ -195,7 +203,7 @@
 			display: none
 		}
 
-		/* navigation-knap */
+		/* navigation-knap i højre hjørne i mobile view */
 
 		.nav-knap {
 			position: fixed;
@@ -529,9 +537,13 @@
 			line-height: 0;
 		}
 
+		/*filtermenu til retter - skjult i mobilre view*/
+
 		#menu .filter-menu {
 			display: none;
 		}
+
+		/* enkelt filterknap til retter - linker til modal-type menu*/
 
 		#menu .filter-menu-mobile {
 			display: block;
@@ -595,6 +607,8 @@
 			justify-content: flex-start;
 			padding: 0 0 3rem;
 		}
+
+		/*bundtone til filtrering til retter - skjult denne menu i mobile view*/
 
 		.filter-darkwrapper {
 			background-color: var(--logograa_moerk);
@@ -737,6 +751,9 @@
 			white-space: nowrap;
 		}
 
+
+		/* styles til bordbooking*/
+
 		#bookbord .valg {
 			display: flex;
 			justify-content: space-between;
@@ -796,21 +813,6 @@
 			padding: 4px 20px 4px;
 			opacity: 0.5;
 		}
-
-		/*
-		#bookbord .valg_knap a.links {
-			background-color: var(--rubrik_negativ);
-			color: var(--logograa_moerk);
-			border: none;
-			border-radius: 5px;
-			padding: 4px 7px 4px;
-			text-transform: uppercase;
-			font-weight: normal;
-			white-space: nowrap;
-			margin: 10rem 0 0;
-			line-height: 4rem;
-		}
-*/
 
 		/* Footer */
 
@@ -940,7 +942,7 @@
 				border-bottom: 1px solid #fff;
 			}
 
-			/*	filter-menu */
+			/*	filter-menu til 2 kolonner for tilpasset skærm*/
 			.filter-darkwrapper ul {
 				display: grid;
 				grid-template-columns: 1fr 1fr;
@@ -1011,6 +1013,7 @@
 				overflow: auto;
 			}
 
+			/* til visning af retter & info i desktop view*/
 			#modal {
 				display: flex;
 				align-items: center;
